# recommand

./: .gitignore
recommand/: .gitignore  CLAUDE.md  (+2 more)
recommand/agent-platform/training-data-synonym/: README.md  conftest.py  pyproject.toml  requirements.txt
recommand/agent-platform/training-data-synonym/configs/: brand_dictionary.yaml  consumable_type_map.yaml  dim_dictionary.yaml  dim_dictionary_snapshot.yaml  intent_keywords.yaml  pipeline.yaml  sentence_templates.yaml  tables.yaml
recommand/agent-platform/training-data-synonym/docs/: ALIGNMENT_cib_o2o.md
recommand/agent-platform/training-data-synonym/metastore_db/: db.lck  service.properties
recommand/agent-platform/training-data-synonym/scripts/: cleaner.py  demo.sh  export_dim_snapshot.py  generate_training_data.py  mock_llm_client.py  seed_fixtures.py  spark_apply_ddl.py  spark_load_fixtures.py  sql_parser.py  verify.py
recommand/agent-platform/training-data-synonym/specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
recommand/agent-platform/training-data-synonym/synonym-dictionary/: README.md
recommand/agent-platform/training-data-synonym/test_output/: brands_diff.yaml  brands_normalized.csv  brands_raw.csv  categories_diff.yaml  categories_normalized.csv  categories_raw.csv  dim_dictionary_snapshot.yaml  item_profile.jsonl  item_tags.jsonl  summary.json  synonyms_meta.json  synonyms_solr.txt  tables_meta.json  tag_enrichment_failures.jsonl  tag_enrichment_state.jsonl
recommand/agent-platform/training-data-synonym/training_data/: __init__.py  data_model.py  param_ops.py
(+373 files in other folders)
